# django-import-export

./: .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  SECURITY.md  atlassian-ide-plugin.xml  inlang.config.js  pyproject.toml  requirements.txt  runtests.py  runtests.sh  security.md  setup.cfg  setup.py  tox.ini
.github/: .stale.yml  FUNDING.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: django-import-export-ci.yml  pre-commit.yml  pythonapp.yml  release.yml  test.yml
django_import_export.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: Makefile  admin_integration.rst  advanced_usage.rst  api_admin.rst  api_asynchronous_export_backends  api_exceptions.rst  api_fields.rst  api_forms.rst  api_instance_loaders.rst  api_mixins.rst  api_resources.rst  api_results.rst  api_tmp_storages.rst  api_widgets.rst  bulk_import.rst  celery.rst  changelog.rst  conf.py  configuration.rst  contributing.rst  example_app.rst  export_workflow.rst  faq.rst  getting_started.rst  import_workflow.rst  index.rst  installation.rst  make.bat  management_commands.rst  release_notes.rst  screenshots.rst  settings.rst  testing.rst  todo.rst  v4_upgrade.rst
docs/_build/doctrees/: api_admin.doctree  api_fields.doctree  api_instance_loaders.doctree  api_resources.doctree  api_widgets.doctree  changelog.doctree  contributing.doctree  environment.pickle  getting_started.doctree  index.doctree  installation.doctree  todo.doctree
docs/_build/html/: .buildinfo  api_admin.html  api_fields.html  api_instance_loaders.html  api_resources.html  api_widgets.html  changelog.html  contributing.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  todo.html
docs/_build/html/_sources/: api_instance_loaders.txt  contributing.txt
docs/image_src/: export_workflow.txt  import_workflow.txt
docs/images/src/: export_workflow.txt  import_workflow.txt
example/: settings.py  urls.py
example/core/: models.py
example/core/migrations/: 0001_initial.py
import_export/: __init__.py  admin.py  command_utils.py  constants.py  core.py  declarative.py  diff.py  django_compat.py  exceptions.py  fields.py  forms.py  instance_loader.py  instance_loaders.py  mixins.py  options.py  resources.py  results.py  signals.py  tasks.py  tmp_storages.py  utils.py  validators.py  views.py  widgets.py
import_export/formats/: base_formats.py
import_export/locale/ar/LC_MESSAGES/: django.mo  django.po
import_export/locale/bg/LC_MESSAGES/: django.mo  django.po
import_export/locale/ca/LC_MESSAGES/: django.mo  django.po
import_export/locale/cs/LC_MESSAGES/: django.mo  django.po
import_export/locale/de/LC_MESSAGES/: django.mo  django.po
import_export/locale/es/LC_MESSAGES/: django.mo  django.po
import_export/locale/es_AR/LC_MESSAGES/: django.mo  django.po
import_export/management/commands/: export.py  import.py  import_file.py
import_export/static/import_export/: action_formats.js  export.css  export_selectable_fields.js  guess_format.js  import.css
import_export/templates/admin/: app_list.html
import_export/templatetags/: import_export_filters.py  import_export_tags.py
requirements/: base.txt  deploy.txt  dev.txt  docs.txt  test.txt
tests/: books-sample.csv  database.db  docker-compose.yml  manage.py  settings.py  urls.py
tests/bulk/: README.md  docker-compose.yml  import_book.py
tests/core/: admin.py  celery.py  forms.py  models.py  tests.py  utils.py  views.py
tests/core/exports/: .~lock.books.csv#  authors.csv  books-ISO-8859-1.csv  books-dos.csv  books-empty-author-email.xlsx  books-for-delete.csv  books-invalid-date.csv  books-mac.csv  books-mac.tsv  books-no-headers.xlsx  books-unicode.csv  books-unicode.tsv  books-with-empty-header-row.csv  books-with-errors.csv  books.csv  books.json  books.xls  books.xlsx  child.csv  ebooks.csv
tests/core/fixtures/: author.json  book.json  category.json  category.yaml
tests/core/imports/: books_for_author.csv
tests/core/migrations/: 0001_initial.py  0002_book_published_time.py  0003_auto_20160308_0449.py  0003_withfloatfield.py  0004_auto_20160426_0128.py  0004_bookwithchapters.py  0005_addparentchild.py  0006_auto_20171130_0147.py  0007_auto_20180628_0411.py  0008_auto_20190409_0846.py  0009_auto_20211111_0807.py  0010_uuidbook.py  0011_uuidcategory_legacybook_alter_uuidbook_id_and_more.py  0012_alter_book_added_alter_book_published_time.py  0012_author_title.py  0012_book_isbn.py  0012_delete_legacybook.py  0012_withpositiveintegerfields.py  0013_alter_author_birthday.py  0013_book_isbn.py  0014_bookwithchapternumbers.py  0015_withpositiveintegerfields.py  0016_alter_category_options_alter_uuidcategory_options.py  0017_namedauthor_uuidbook_author.py  0018_author_resource.py
tests/core/tests/: __init__.py  admin_integration_tests.py  base_formats_tests.py  cli_import_tests.py  export_task_tests.py  fields_tests.py  file_retrieval_view_tests.py  instance_loaders_tests.py  mixins.py  resources.py  resources_tests.py  test.py  test_admin_integration.py  test_admin_integration_actions.py  test_admin_integration_export.py  test_admin_integration_import.py  test_async_export.py  test_base_formats.py  test_cli_import.py  test_command_export.py  test_command_import.py  test_command_utils.py  test_declarative.py  test_exceptions.py  test_fields.py  test_file_retrieval_view.py  test_forms.py  test_import_export_tags.py  test_instance_loaders.py  test_invalidrow.py  test_mixins.py  test_model_resource_fields_generate_widgets.py  test_permissions.py  test_resources.py  test_results.py  test_tmp_storages.py  test_widgets.py  tests.py  tmp_storages_tests.py  utils.py  (+2 more)
tests/docker/db/: init-mysql-db.sh  init-postgres-db.sh  init-user-db.sh
tests/scripts/: bulk_export.py  bulk_import.py
(+111 files in other folders)
