[build-system]
requires = ["setuptools>=60", "setuptools-scm>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-import-export"
authors = [
    {name = "Bojan MihelaÄ", email = "djangoimportexport@gmail.com"},
]
maintainers = [
    {name = "Matthew Hegarty", email = "djangoimportexport@gmail.com"},
]
description = "Django application and library for importing and exporting data with included admin integration."
keywords = ["django", "import", "export"]
license = {file = "LICENSE"}
requires-python = ">=3.9"
readme = "README.rst"
dynamic = ["version"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]

dependencies = [
    "diff-match-patch==20241021",
    "Django>=4.2",
    "tablib>=3.7.0"
]

[project.optional-dependencies]
all = [
    "tablib[all]"
]
cli = ["tablib[cli]"]
ods = ["tablib[ods]"]
pandas = ["tablib[pandas]"]
xls = ["tablib[xls]"]
xlsx = ["tablib[xlsx]"]
yaml = ["tablib[yaml]"]
docs = [
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.1",
    "openpyxl==3.1.5"
]
tests = [
    "psycopg2-binary==2.9.10",
    "mysqlclient==2.2.5",
    "chardet==5.2.0",
    "pytz==2024.2",
    "memory-profiler==0.61.0",
    "django-extensions==3.2.3",
    "coverage==7.6.4",
    "tablib[all]>=3.7.0",
    "setuptools-scm==8.1.0",
]

[project.urls]
Documentation = "https://django-import-export.readthedocs.io/en/stable/"
Repository = "https://github.com/django-import-export/django-import-export"
Changelog = "https://github.com/django-import-export/django-import-export/blob/main/docs/changelog.rst"

[tool.setuptools]
platforms = ["OS Independent"]
license-files = ["LICENSE", "AUTHORS"]

[tool.setuptools_scm]
write_to = "import_export/_version.py"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
