[tool.poetry]
name = "django-import-export-continis"
version = "4.3.15"
description = "Continis Fork: Django application and library for importing and exporting data with included admin integration."
authors = ["Bojan Mihelac <bojan@informatikamihelac.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://django-import-export.readthedocs.io/en/stable/"
repository = "https://github.com/django-import-export/django-import-export"
keywords = ["django", "import", "export"]
packages = [{ include = "import_export" }]

[tool.poetry.dependencies]
python = ">=3.10"
Django = ">=4.2"
diff-match-patch = "20241021"
tablib = ">=3.7.0"

[[tool.poetry.source]]
name = "pypiserver"
url = "https://pypi.continis.ch/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
