[metadata]
license_file = LICENSE

[zest.releaser]
create-wheel = yes
python-file-with-version = import_export/__init__.py

[isort]
known_django=django
skip=docs,migrations
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
default_section=THIRDPARTY
known_standard_library=tablib
known_first_party=import_export
multi_line_output=3
line_length=100
indent=4
